--- a/private/pom.xml
+++ b/private/pom.xml
@@ -8,7 +8,7 @@
     <version>3.3.4-SNAPSHOT</version>
   </parent>
 
-  <groupId>org.neo4j</groupId>
+  <groupId>com.neo4j</groupId>
   <artifactId>commercial-parent</artifactId>
   <version>3.3.4-SNAPSHOT</version>
 
