Update license config

--- a/private/enterprise/server-commercial/pom.xml
+++ b/private/enterprise/server-commercial/pom.xml
@@ -38,9 +38,10 @@
   <licenses>
     <license>
       <name>Neo4j Commercial license</name>
-      <url>http://neo4j.com/commercial-license.html</url>
       <comments>
-        Some commercial license blurb
+        Copyright (c) 2002-2018 "Neo Technology,"
+        Network Engine for Objects in Lund AB [http://neotechnology.com]
+        This file is a commercial add-on to Neo4j Enterprise Edition.
       </comments>
     </license>
   </licenses>
