--- a/private/packaging/standalone/standalone-enterprise/pom.xml
+++ b/private/packaging/standalone/standalone-enterprise/pom.xml
@@ -122,7 +122,7 @@
               <licensingRequirementFiles combine.children="append">
                 <licensingRequirementFile>licensing-requirements-browser.xml</licensingRequirementFile>
               </licensingRequirementFiles>
-              <excludedGroups>^((org.neo4j){1}|(org.neo4j.app){1}|(org.neo4j.server.plugin){1}|(org.neo4j.assembly){1})$</excludedGroups>
+              <excludedGroups>^((org.neo4j){1}|(org.neo4j.app){1}|(org.neo4j.server.plugin){1}|(org.neo4j.assembly){1}|(com.neo4j){1}|(com.neo4j.app){1}|(com.neo4j.server.plugin){1}|(com.neo4j.assembly){1})$</excludedGroups>
 
               <thirdPartyLicensingFilename>${project.artifactId}-${neo4j.version}-NOTICE.txt</thirdPartyLicensingFilename>
               <prependText>commercial-notice.txt</prependText>
