--- a/private/enterprise/kernel-commercial/pom.xml
+++ b/private/enterprise/kernel-commercial/pom.xml
@@ -33,6 +33,10 @@
     </license>
   </licenses>
 
+  <properties>
+    <moduleName>org.neo4j.kernel.commercial</moduleName>
+  </properties>
+
   <dependencies>
     <dependency>
       <groupId>org.neo4j</groupId>
