Include kernel commercial into packaging

--- a/private/packaging/standalone/standalone-enterprise/pom.xml
+++ b/private/packaging/standalone/standalone-enterprise/pom.xml
@@ -162,6 +162,11 @@
       <artifactId>neo4j-server-commercial</artifactId>
       <version>${project.version}</version>
     </dependency>
+    <dependency>
+      <groupId>com.neo4j</groupId>
+      <artifactId>neo4j-kernel-commercial</artifactId>
+      <version>${project.version}</version>
+    </dependency>
   </dependencies>
 
 </project>
