--- a/private/enterprise/causal-clustering-commercial/pom.xml
+++ b/private/enterprise/causal-clustering-commercial/pom.xml
@@ -20,7 +20,7 @@
     <packaging>jar</packaging>
 
     <properties>
-        <moduleName>org.neo4j.causalclustering.commercial</moduleName>
+        <moduleName>com.neo4j.causalclustering.commercial</moduleName>
     </properties>
 
     <licenses>
