--- a/private/enterprise/kernel-commercial/pom.xml
+++ b/private/enterprise/kernel-commercial/pom.xml
@@ -36,7 +36,7 @@
   </licenses>
 
   <properties>
-    <moduleName>org.neo4j.kernel.commercial</moduleName>
+    <moduleName>com.neo4j.kernel.commercial</moduleName>
   </properties>
 
   <dependencies>
