--- a/private/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
+++ b/private/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
@@ -54,6 +54,9 @@ dbms.directories.import=import
 # network interface (e.g. 0.0.0.0 for all interfaces).
 #dbms.backup.address=0.0.0.0:6362
 
+# Enable encryption on the backup service for CC instances (does not work for single-instance or HA clusters)
+#dbms.backup.ssl_policy=backup
+
 #*****************************************************************
 # Network connector configuration
 #*****************************************************************
