Added some docs to config around backups

--- a/private/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
+++ b/private/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
@@ -52,6 +52,8 @@ dbms.directories.import=import
 # By default the backup service will only listen on localhost.
 # To enable remote backups you will have to bind to an external
 # network interface (e.g. 0.0.0.0 for all interfaces).
+# The protocol running varies depending on deployment. In a Causal Clustering environment this is the
+# same protocol that runs on causal_clustering.transaction_listen_address.
 #dbms.backup.address=0.0.0.0:6362
 
 # Enable encryption on the backup service for CC instances (does not work for single-instance or HA clusters)
@@ -309,8 +311,9 @@ dbms.connector.https.enabled=true
 # If you don't know what value to use here, use this machines ip address.
 #causal_clustering.discovery_listen_address=:5000
 
-# Network interface and port for the transaction shipping server to listen on. If you want to allow for
-# messages to be read from
+# Network interface and port for the transaction shipping server to listen on.
+# Please note that it is also possible to run the backup client against this port so always limit access to it via the
+# firewall and configure an ssl policy. If you want to allow for messages to be read from
 # any network on this machine, us 0.0.0.0. If you want to constrain communication to a specific network address
 # (such as a private ip on AWS, for example) then use that ip address instead.
 # If you don't know what value to use here, use this machines ip address.
