Added some notes to neo4j conf for multiclustering

--- a/private/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
+++ b/private/packaging/standalone/standalone-enterprise/src/main/distribution/text/enterprise/conf/neo4j.conf
@@ -5,7 +5,9 @@
 # #{settings-reference.url}
 #*****************************************************************
 
-# The name of the database to mount
+# The name of the database to mount. Note that this is *not* to be confused with
+# the causal_clustering.database setting, used to specify a logical database
+# name when creating a multi-clustering deployment.
 #dbms.active_database=graph.db
 
 # Paths of directories in the installation.
@@ -390,6 +392,17 @@ dbms.connector.https.enabled=true
 #*****************************************************************
 # The following settings are used less frequently.
 # If you don't know what these are, you don't need to change these from their default values.
+
+# The name of the database being hosted by this server instance. This 
+# configuration setting may be safely ignored unless deploying a multicluster. 
+# Instances may be allocated to constituent clusters by assigning them 
+# distinct database names using this setting. For instance if you had 6 
+# instances you could form 2 clusters by assigning half the database name 
+# "foo", half the name "bar". The setting value must match exactly between 
+# members of the same cluster. This setting is a one-off: once an instance 
+# is configured with a database name it may not be changed in future without
+# using `neo4j-admin unbind`. 
+#causal_clustering.database=default 
 
 # Address and port that this machine advertises that it's RAFT server is listening at. Should be a
 # specific network address. If you are unsure about what value to use here, use this machine's ip address.
