--- a/public/enterprise/neo4j-enterprise/pom.xml
+++ b/public/enterprise/neo4j-enterprise/pom.xml
@@ -184,5 +184,12 @@
       <type>test-jar</type>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-lucene-index</artifactId>
+      <version>${project.version}</version>
+      <type>test-jar</type>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 </project>
