Add the bloom addon to commercial repo

--- a/private/enterprise/pom.xml
+++ b/private/enterprise/pom.xml
@@ -26,6 +26,7 @@
   <modules>
     <module>licensecheck-commercial-config</module>
     <module>kernel-commercial</module>
+    <module>bloom-addon</module>
     <module>causal-clustering-commercial</module>
     <module>server-commercial</module>
   </modules>
