--- a/private/enterprise/bloom-addon/pom.xml
+++ b/private/enterprise/bloom-addon/pom.xml
@@ -4,8 +4,8 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>org.neo4j</groupId>
-    <artifactId>parent</artifactId>
+    <groupId>com.neo4j</groupId>
+    <artifactId>commercial-parent</artifactId>
     <version>3.4.1-SNAPSHOT</version>
     <relativePath>../..</relativePath>
   </parent>
@@ -18,25 +18,16 @@
   <packaging>jar</packaging>
 
   <properties>
-    <license-text.header>../../build/AGPL-3-header.txt</license-text.header>
     <moduleName>org.neo4j.kernel.api.impl.bloom</moduleName>
   </properties>
 
   <licenses>
     <license>
-      <name>GNU Affero General Public License, Version 3 with the Commons Clause</name>
-      <url>http://www.gnu.org/licenses/agpl-3.0-standalone.html</url>
-      <comments>The software ("Software") developed and owned by Neo4j Sweden AB (referred to in this notice as "Neo4j") is
-        licensed under the GNU AFFERO GENERAL PUBLIC LICENSE Version 3 with the Commons Clause to all
-        third parties and that license is included below.
-
-        However, if you have executed an End User Software License and Services
-        Agreement or an OEM Software License and Support Services Agreement, or
-        another commercial license agreement with Neo4j or one of its
-        affiliates (each, a "Commercial Agreement"), the terms of the license in
-        such Commercial Agreement will supersede the GNU AFFERO GENERAL PUBLIC
-        LICENSE Version 3 and you may use the Software solely pursuant to the
-        terms of the relevant Commercial Agreement.
+      <name>Neo4j Commercial license</name>
+      <comments>
+        Copyright (c) 2002-2018 "Neo4j,"
+        Neo4j Sweden AB [http://neo4j.com]
+        This file is a commercial add-on to Neo4j Enterprise Edition.
       </comments>
     </license>
   </licenses>
