--- a/pom.xml
+++ b/pom.xml
@@ -15,4 +15,19 @@
         <module>public</module>
     </modules>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.neo4j.build.plugins</groupId>
+                <artifactId>license-maven-plugin</artifactId>
+                <!-- inserting licenses is better than checking for them -->
+                <executions>
+                    <execution>
+                        <id>check-licenses</id>
+                        <phase>none</phase>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
