Exclude cypher shell from license header checks

--- a/private/pom.xml
+++ b/private/pom.xml
@@ -149,6 +149,9 @@
               <include>**/*.psd1</include>
               <include>**/*.bat</include>
             </includes>
+	    <excludes>
+              <exclude>**/cypher-shell/*</exclude>
+	    </excludes>
           </configuration>
           <executions>
             <execution>
