--- a/private/pom.xml
+++ b/private/pom.xml
@@ -33,36 +33,12 @@
     </license>
   </licenses>
 
+  <properties>
+    <license-text.header>build/license-header.txt</license-text.header>
+  </properties>
+
   <build>
     <plugins>
-      <plugin>
-        <artifactId>maven-checkstyle-plugin</artifactId>
-        <version>2.17</version>
-        <configuration>
-          <configLocation>build/checkstyle.xml</configLocation>
-          <consoleOutput>true</consoleOutput>
-          <logViolationsToConsole>true</logViolationsToConsole>
-          <failsOnError>true</failsOnError>
-          <failOnViolation>true</failOnViolation>
-          <includeTestSourceDirectory>true</includeTestSourceDirectory>
-        </configuration>
-        <dependencies>
-          <dependency>
-            <groupId>com.puppycrawl.tools</groupId>
-            <artifactId>checkstyle</artifactId>
-            <version>8.2</version>
-          </dependency>
-        </dependencies>
-        <executions>
-          <execution>
-            <id>validate</id>
-            <phase>none</phase>
-            <goals>
-              <goal>check</goal>
-            </goals>
-          </execution>
-        </executions>
-      </plugin>
 
       <!-- Override parent configuration to only allow "com.neo4j" packages -->
       <plugin>
@@ -84,21 +60,6 @@
           </rules>
           <fail>true</fail>
         </configuration>
-      </plugin>
-
-      <plugin>
-        <groupId>org.neo4j.build.plugins</groupId>
-        <artifactId>license-maven-plugin</artifactId>
-        <executions>
-          <execution>
-            <id>check-licenses</id>
-            <phase>none</phase>
-          </execution>
-          <execution>
-            <id>list-all-licenses-win</id>
-            <phase>none</phase>
-          </execution>
-        </executions>
       </plugin>
     </plugins>
 
@@ -129,47 +90,18 @@
             </dependency>
           </dependencies>
         </plugin>
+
         <plugin>
-          <groupId>com.mycila</groupId>
+          <groupId>org.neo4j.build.plugins</groupId>
           <artifactId>license-maven-plugin</artifactId>
-          <version>3.0</version>
           <configuration>
-            <header>license-header.txt</header>
-            <mapping>
-              <java>SLASHSTAR_STYLE</java>
-              <ps1>SCRIPT_STYLE</ps1>
-              <psm1>SCRIPT_STYLE</psm1>
-              <psd1>SCRIPT_STYLE</psd1>
-              <bat>BATCH</bat>
-            </mapping>
-            <includes>
-              <include>**/*.java</include>
-              <include>**/*.ps1</include>
-              <include>**/*.psm1</include>
-              <include>**/*.psd1</include>
-              <include>**/*.bat</include>
-            </includes>
-	    <excludes>
+            <excludes>
               <exclude>**/cypher-shell/*</exclude>
-	    </excludes>
+            </excludes>
+            <header>${license-text.header}</header>
           </configuration>
-          <executions>
-            <execution>
-              <id>check-headers</id>
-              <phase>compile</phase>
-              <goals>
-                <goal>check</goal>
-              </goals>
-            </execution>
-          </executions>
-          <dependencies>
-            <dependency>
-              <groupId>com.neo4j.build</groupId>
-              <artifactId>licensecheck-commercial-config</artifactId>
-              <version>${project.version}</version>
-            </dependency>
-          </dependencies>
         </plugin>
+
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-failsafe-plugin</artifactId>
@@ -211,7 +143,7 @@
             <artifactId>licensing-maven-plugin</artifactId>
           </plugin>
           <plugin>
-            <groupId>com.mycila</groupId>
+            <groupId>org.neo4j.build.plugins</groupId>
             <artifactId>license-maven-plugin</artifactId>
           </plugin>
         </plugins>
