--- a/private/enterprise/causal-clustering-commercial/pom.xml
+++ b/private/enterprise/causal-clustering-commercial/pom.xml
@@ -30,6 +30,10 @@
         </license>
     </licenses>
 
+    <properties>
+        <license-text.header>../../build/license-header.txt</license-text.header>
+    </properties>
+
     <dependencies>
         <dependency>
             <groupId>org.neo4j</groupId>
