--- a/private/enterprise/pom.xml
+++ b/private/enterprise/pom.xml
@@ -39,6 +39,9 @@
       </comments>
     </license>
   </licenses>
+  <properties>
+    <license-text.header>../build/license-header.txt</license-text.header>
+  </properties>
 
   <build>
     <plugins>
