--- a/private/packaging/standalone/pom.xml
+++ b/private/packaging/standalone/pom.xml
@@ -45,6 +45,7 @@
     <org.neo4j.webservice.packages>org.neo4j.rest.web</org.neo4j.webservice.packages>
 
     <skip.shell.tests>false</skip.shell.tests>
+    <license-text.header>../../build/license-header.txt</license-text.header>
   </properties>
 
   <licenses>
