--- a/public/pom.xml
+++ b/public/pom.xml
@@ -96,11 +96,11 @@
     <scala.java9.arg/>
     <jersey.version>1.19.3</jersey.version>
 
-    <licensing.year>2018</licensing.year>
+    <currentYear>2018</currentYear>
   </properties>
 
   <modules>
-    <module>build</module>
+    <module>build-resources</module>
     <module>community</module>
     <module>enterprise</module>
     <module>integrationtests</module>
@@ -486,7 +486,7 @@
           <dependencies>
             <dependency>
               <groupId>org.neo4j.build</groupId>
-              <artifactId>resources</artifactId>
+              <artifactId>build-resources</artifactId>
               <version>${project.version}</version>
             </dependency>
           </dependencies>
@@ -526,13 +526,13 @@
               <g4>SLASHSTAR_STYLE</g4>
             </mapping>
             <properties>
-              <currentYear>${licensing.year}</currentYear>
+              <currentYear>${currentYear}</currentYear>
             </properties>
           </configuration>
           <dependencies>
             <dependency>
               <groupId>org.neo4j.build</groupId>
-              <artifactId>resources</artifactId>
+              <artifactId>build-resources</artifactId>
               <version>${project.version}</version>
             </dependency>
           </dependencies>
@@ -716,7 +716,7 @@
           </dependency>
           <dependency>
             <groupId>org.neo4j.build</groupId>
-            <artifactId>resources</artifactId>
+            <artifactId>build-resources</artifactId>
             <version>${project.version}</version>
           </dependency>
         </dependencies>
