--- a/private/pom.xml
+++ b/private/pom.xml
@@ -18,7 +18,7 @@
   <description>Neo4j Graph Database</description>
 
   <modules>
-    <module>build</module>
+    <module>build-resources</module>
     <module>enterprise</module>
     <module>packaging</module>
   </modules>
@@ -85,7 +85,7 @@
           <dependencies>
             <dependency>
               <groupId>com.neo4j.build</groupId>
-              <artifactId>resources</artifactId>
+              <artifactId>build-resources-commercial</artifactId>
               <version>${project.version}</version>
             </dependency>
           </dependencies>
@@ -96,7 +96,7 @@
           <dependencies>
             <dependency>
               <groupId>com.neo4j.build</groupId>
-              <artifactId>resources</artifactId>
+              <artifactId>build-resources-commercial</artifactId>
               <version>${project.version}</version>
             </dependency>
           </dependencies>
