--- a/public/packaging/standalone/pom.xml
+++ b/public/packaging/standalone/pom.xml
@@ -139,7 +139,7 @@
     <!-- Defined to allow maven to calculate build order, it's used in the plugin above -->
     <dependency>
       <groupId>org.neo4j.build</groupId>
-      <artifactId>resources</artifactId>
+      <artifactId>build-resources</artifactId>
       <version>${project.version}</version>
       <scope>provided</scope>
     </dependency>
