Update licenses for new modules

--- a/public/community/community-it/kernel-it/pom.xml
+++ b/public/community/community-it/kernel-it/pom.xml
@@ -17,8 +17,8 @@
     <description>Neo4j community edition kernel integration tests.</description>
 
     <properties>
-        <license-text.header>../../../build/GPL-3-header.txt</license-text.header>
-        <licensing.prepend.text>notice-gpl-prefix.txt</licensing.prepend.text>
+        <license-text.header>headers/GPL-3-header.txt</license-text.header>
+        <licensing.prepend.text>licensing/notice-gpl-prefix.txt</licensing.prepend.text>
         <moduleName>org.neo4j.community.kernel-it</moduleName>
     </properties>
 
