--- a/public/community/community-it/index-it/pom.xml
+++ b/public/community/community-it/index-it/pom.xml
@@ -15,11 +15,11 @@
 
     <name>Neo4j - Community Index Integration Tests</name>
     <packaging>jar</packaging>
-    <description>Neo4j community edition indez integration tests.</description>
+    <description>Neo4j community edition index integration tests.</description>
 
     <properties>
-        <license-text.header>../../../build/GPL-3-header.txt</license-text.header>
-        <licensing.prepend.text>notice-gpl-prefix.txt</licensing.prepend.text>
+        <license-text.header>headers/GPL-3-header.txt</license-text.header>
+        <licensing.prepend.text>licensing/notice-gpl-prefix.txt</licensing.prepend.text>
         <moduleName>org.neo4j.community.index-it</moduleName>
     </properties>
 
