Update dependencies of TCK tests

--- a/public/enterprise/cypher/compatibility-spec-suite/pom.xml
+++ b/public/enterprise/cypher/compatibility-spec-suite/pom.xml
@@ -118,10 +118,9 @@
     <!-- neo4j testing -->
 
     <dependency>
-      <groupId>org.neo4j</groupId>
-      <artifactId>neo4j-kernel</artifactId>
+      <groupId>org.neo4j.community</groupId>
+      <artifactId>it-test-support</artifactId>
       <version>${project.version}</version>
-      <type>test-jar</type>
       <scope>test</scope>
     </dependency>
 
