Fix "build is platform dependent" warning for build-resources
Public and private build-resources modules have no parent and thus do
not inherit the source encoding property. This resulted in the specified
warning being printed for plugins that read files from disk,
like checkstyle.

This commit fixes the problem by adding the source encoding property.

--- a/public/build-resources/pom.xml
+++ b/public/build-resources/pom.xml
@@ -11,6 +11,10 @@
     <description>Build resources for community build.</description>
     <url>http://components.neo4j.org/${project.artifactId}/${project.version}</url>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <scm>
         <connection>scm:git:git://github.com/neo4j/neo4j.git</connection>
         <developerConnection>scm:git:git@github.com:neo4j/neo4j.git</developerConnection>
