--- a/private/build-resources/pom.xml
+++ b/private/build-resources/pom.xml
@@ -9,6 +9,10 @@
 
     <name>Neo4j - Commercial build resources</name>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     <build>
         <plugins>
             <plugin>
