--- a/public/community/logging/pom.xml
+++ b/public/community/logging/pom.xml
@@ -90,6 +90,10 @@ the relevant Commercial Agreement.
             <artifactId>junit-jupiter-api</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-params</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.apache.maven.surefire</groupId>
             <artifactId>surefire-logger-api</artifactId>
         </dependency>
